sonnar issue and custom scrollbar

--- a/src/assets/styles/global/_common.scss
+++ b/src/assets/styles/global/_common.scss
@@ -6,36 +6,47 @@
   justify-content: center;
   align-items: center;
 }
+
 .d-none {
   display: none;
 }
+
 a {
   cursor: pointer;
 }
+
 .mbl-20 {
   margin-bottom: 20px !important;
 }
+
 .mb-0 {
   margin-bottom: 0px !important;
 }
+
 .align-items-center {
   align-items: center !important;
 }
+
 .position-relative {
   position: relative !important;
 }
+
 .position-absolute {
   position: absolute !important;
 }
+
 .mr-5 {
   margin-right: 5px;
 }
+
 .mr-10 {
   margin-right: 10px;
 }
+
 .mr-20 {
   margin-right: 20px;
 }
+
 .mbl-10 {
   margin-bottom: 10px;
 }
@@ -84,10 +95,22 @@ legend {
   font-size: $font-14 !important;
   line-height: 18px;
 }
+.scroll::-webkit-scrollbar {
+  width: 5px;
+}
+
+.scroll::-webkit-scrollbar-thumb {
+  background: #a1a5b7;
+}
+
+.scroll::-webkit-scrollbar-track {
+  background: #dddddd;
+}
 
 //common scss
 .auth-content {
   margin-left: 600px;
+
   @media (max-width: breakpoint(screen-lg-max)) {
     margin-left: 0px;
   }
@@ -119,15 +142,18 @@ legend {
     padding: 10px 18px;
     width: 100%;
     border-radius: 3px;
+
     &:focus {
       outline: none !important;
     }
   }
+
   .avtaar {
     .edit-icon {
       top: 0;
     }
   }
+
   .border-top {
     border-top: 1px solid $bs-checkbox-bg !important;
   }
